--- a/commissions.html
+++ b/commissions.html
@@ -15,7 +15,7 @@
 
 <head>
 <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
-<link rel="shortcut icon" type="image/png" href="https://cloud.githubusercontent.com/assets/28825567/26804329/972f6f72-4a15-11e7-8f94-f9e092f3ea8b.png">
+<link rel="shortcut icon" type="image/png" href="https://user-images.githubusercontent.com/30205343/29242582-c4beb894-7f5d-11e7-891c-1a03fc89c248.png">
 
 <meta charset="UTF-8">
 
@@ -47,12 +47,12 @@
 
 
 <div id="navigation">
-	<a href="https://kitkokat.github.io/kitkokat/">Home</a>
-	<a href="https://kitkokat.github.io/kitkokat/shop">Shop</a>
+	<a href="https://skirtzzz.github.io/Skirtzzz/">Home</a>
+	<a href="https://skirtzzz.github.io/Skirtzzz/shop">Shop</a>
 	<a href="http://skirtzzz.daportfolio.com/">Portfolio</a>
-	<a href="https://kitkokat.github.io/kitkokat/about">About</a>
-	<a href="https://kitkokat.github.io/kitkokat/contact">Contact</a>
-	<a href="https://kitkokat.github.io/kitkokat/commissions">Commissions</a>
+	<a href="https://skirtzzz.github.io/Skirtzzz/about">About</a>
+	<a href="https://skirtzzz.github.io/Skirtzzz/contact">Contact</a>
+	<a href="https://skirtzzz.github.io/Skirtzzz/commissions">Commissions</a>
 </div>
 
 
@@ -62,7 +62,7 @@
 
 <p><center>
 
-  <a href="https://kitkokat.github.io/kitkokat/"><img src="https://cloud.githubusercontent.com/assets/28825567/26804299/75f1ee98-4a15-11e7-8ba1-8256551f6d1f.jpg" alt=""/></a><br>
+  <a href="https://skirtzzz.github.io/Skirtzzz/"><img src="https://user-images.githubusercontent.com/30205343/29242602-0f32b72c-7f5e-11e7-87d5-dead9bbb87c9.jpg" alt=""/></a><br>
 
 </p>
 
@@ -85,7 +85,7 @@
 
 <div id="banner">
 
-<img src="https://cloud.githubusercontent.com/assets/28825567/26805653/ec890136-4a1a-11e7-8751-02a9da9c8b42.png" alt="Commission Pricing Guide"/>
+<img src="https://user-images.githubusercontent.com/30205343/29242595-fc3bec88-7f5d-11e7-941d-daed741c2ffa.png" alt="Commission Pricing Guide"/>
 </div>
 
 	<div id="textsection">
@@ -98,7 +98,7 @@
 
 <div id="banner">
 
-<center><img src="https://cloud.githubusercontent.com/assets/28825567/26805457/f984919e-4a19-11e7-9987-109ec97d5dff.png" alt="Things You Can Order"/></center>
+<center><img src="https://user-images.githubusercontent.com/30205343/29242625-5a358114-7f5e-11e7-92d8-72837bc616ac.png" alt="Things You Can Order"/></center>
 </div>
 
 	<div id="textsection">
@@ -112,7 +112,7 @@
 
 <div id="banner">
 
-<center><img src="https://cloud.githubusercontent.com/assets/28825567/26805703/35907d96-4a1b-11e7-84dc-42bd222cc6c0.png" alt="Things I Won't Draw"/></center>
+<center><img src="https://user-images.githubusercontent.com/30205343/29242622-4cfa31c0-7f5e-11e7-9151-60b024cf6f24.png" alt="Things I Won't Draw"/></center>
 </div>
 
 	<div id="textsection">
@@ -127,7 +127,7 @@
         
 <div id="banner">
 
-<center><img src="https://cloud.githubusercontent.com/assets/28825567/26805682/0b9c47f4-4a1b-11e7-9b5d-f69f0f684686.png" alt="How To Pay"/></center>
+<center><img src="https://user-images.githubusercontent.com/30205343/29242612-36bde5be-7f5e-11e7-93a2-fab1747047a6.png" alt="How To Pay"/></center>
 </div>
 
 	<div id="textsection">
@@ -138,7 +138,7 @@
 
 <div id="banner">
 
-<center><img src="https://cloud.githubusercontent.com/assets/28825567/26805694/1a5c6576-4a1b-11e7-9daa-be3aea655f69.png" alt="Other Info"/></center>
+<center><https://user-images.githubusercontent.com/30205343/29242617-43de7eca-7f5e-11e7-90c5-6b5b6da3863c.png" alt="Other Info"/></center>
 </div>
 
 	<div id="textsection">
@@ -163,23 +163,22 @@
 <div class="boxshadows2">
 
 <center>
-<a href="https://www.patreon.com/skirtzzz" target="new"><img src="https://cloud.githubusercontent.com/assets/28825567/26804385/c74dd46e-4a15-11e7-9cb7-fadcd00dc525.png" alt=""/></a><br>
+<a href="https://www.patreon.com/skirtzzz" target="new"><img src="https://user-images.githubusercontent.com/30205343/29242642-8613c44e-7f5e-11e7-9c97-f07b2fee10a1.png" alt=""/></a><br>
 
-<a href="http://skirtzzz.deviantart.com" target="new"><img src="https://cloud.githubusercontent.com/assets/28825567/26804535/4bae9766-4a16-11e7-95e4-05f6e79843b9.png" alt=""/></a><br>
+<a href="http://skirtzzz.deviantart.com" target="new"><img src="https://user-images.githubusercontent.com/30205343/29242632-6d516e0c-7f5e-11e7-9aa3-c0f5c5476837.png" alt=""/></a><br>
 
-<a href="http://skirtzzz.tumblr.com" target="new"><img src="https://cloud.githubusercontent.com/assets/28825567/26804516/3f9b9118-4a16-11e7-96a2-3647bf8749dd.png" alt=""/></a><br>
+<a href="http://skirtzzz.tumblr.com" target="new"><img src="https://user-images.githubusercontent.com/30205343/29242643-8fc1f4f2-7f5e-11e7-993c-a54e03598ef3.png" alt=""/></a><br>
 
-<a href="http://twitter.com/Skirtzzz" target="new"><img src="https://cloud.githubusercontent.com/assets/28825567/26804593/7cd5b00e-4a16-11e7-9510-14a3aa0f901e.png" alt=""/></a><br>
+<a href="http://twitter.com/Skirtzzz" target="new"><img src="https://user-images.githubusercontent.com/30205343/29242647-9a0919a4-7f5e-11e7-8c9b-0cfd7ee5caa4.png" alt=""/></a><br>
 
-<a href="http://www.facebook.com/pages/Skirtz/111421185621691" target="new"><img src="https://cloud.githubusercontent.com/assets/28825567/26804560/5edb80b0-4a16-11e7-8e52-946bf85f4e04.png" alt=""/></a><br>
-
+<a href="http://www.facebook.com/pages/Skirtz/111421185621691" target="new"><img src="https://user-images.githubusercontent.com/30205343/29242639-7996a13c-7f5e-11e7-8690-857a45d01fe2.png" alt=""/></a><br>
 </center>
 
 <br></div>
 
 <div class="footer">
 
-&copy;Alli White 2014.</div>
+&copy;Alli White 2017.</div>
 
 <p></p>
 
