--- a/contact.html
+++ b/contact.html
@@ -64,7 +64,7 @@
 
 <p><center>
 
-  <a href="https://kitkokat.github.io/kitkokat/"><img src="https://user-images.githubusercontent.com/30205343/29242602-0f32b72c-7f5e-11e7-87d5-dead9bbb87c9.jpg" alt=""/></a><br>
+  <a href="https://skirtzzz.github.io/Skirtzzz/"><img src="https://user-images.githubusercontent.com/30205343/29242602-0f32b72c-7f5e-11e7-87d5-dead9bbb87c9.jpg" alt=""/></a><br>
 
 </p>
 
