Changed bio page picture of Alli

--- a/about.html
+++ b/about.html
@@ -77,7 +77,7 @@
 <p>
 
 <div id="biopic"> 
-<img src="https://user-images.githubusercontent.com/30205343/29242593-f102d02a-7f5d-11e7-91fa-1a4676b3dcbc.jpg" alt="portait of Alli">
+<img src="https://user-images.githubusercontent.com/30205343/78596883-5f749e00-7801-11ea-9f09-444172aabf47.png" alt="portait of Alli">
 Alli White is an independent business owner and freelance artist who resides on a mountain in Northwestern Idaho. When she's not talking to the wild turkeys, she's probably drawing cute girls.
 </p>
 </div>
